# accessibility

./: AGENTS.md  CODEOWNERS  OAT.xml  README.md  README_en.md  README_zh.md  accessibility.gni  accessibility_aafwk.gni  accessibility_manager_service.gni  bundle.json  hisysevent.yaml  hisysevent_ue.yaml  ohos.build
common/interface/: AccessibilityIpcTypes.idl  BUILD.gn  IAccessibleAbilityManagerService.idl  libaccessibility_interface.map
common/interface/include/: accessibility_element_operator_callback_proxy.h  accessibility_element_operator_callback_stub.h  accessibility_element_operator_proxy.h  accessibility_element_operator_stub.h  accessibility_enable_ability_callback_observer_proxy.h  accessibility_enable_ability_callback_observer_stub.h  accessibility_enable_ability_lists_observer_proxy.h  accessibility_enable_ability_lists_observer_stub.h  accessibility_icp_interface_code.h  accessibility_ipc_interface_code.h  accessibility_senior_mode_state_observer_proxy.h  accessibility_senior_mode_state_observer_stub.h  accessible_ability_channel_proxy.h  accessible_ability_channel_stub.h  accessible_ability_client_proxy.h  accessible_ability_client_stub.h  accessible_ability_manager_caption_observer_proxy.h  accessible_ability_manager_caption_observer_stub.h  accessible_ability_manager_config_observer_proxy.h  accessible_ability_manager_config_observer_stub.h  accessible_ability_manager_service_proxy.h  accessible_ability_manager_service_stub.h  accessible_ability_manager_state_observer_proxy.h  accessible_ability_manager_state_observer_stub.h  api_event_reporter.h  api_reporter_helper.h  i_accessibility_element_operator.h  i_accessibility_element_operator_callback.h  i_accessibility_enable_ability_lists_observer.h  i_accessible_ability_channel.h  i_accessible_ability_client.h  i_accessible_ability_manager_caption_observer.h  i_accessible_ability_manager_config_observer.h  i_accessible_ability_manager_service.h  i_accessible_ability_manager_state_observer.h  iaccessibility_app_senior_mode_state_observer.h  iaccessibility_element_operator.h  iaccessibility_element_operator_callback.h  iaccessibility_enable_ability_callback_observer.h  iaccessibility_enable_ability_lists_observer.h  (+3 more)
common/interface/src/: accessibility_element_operator_callback_proxy.cpp  accessibility_element_operator_callback_stub.cpp  accessibility_element_operator_proxy.cpp  accessibility_element_operator_stub.cpp  accessibility_enable_ability_callback_observer_proxy.cpp  accessibility_enable_ability_callback_observer_stub.cpp  accessibility_enable_ability_lists_observer_proxy.cpp  accessibility_enable_ability_lists_observer_stub.cpp  accessibility_senior_mode_state_observer_proxy.cpp  accessibility_senior_mode_state_observer_stub.cpp  accessible_ability_channel_proxy.cpp  accessible_ability_channel_stub.cpp  accessible_ability_client_proxy.cpp  accessible_ability_client_stub.cpp  accessible_ability_manager_caption_observer_proxy.cpp  accessible_ability_manager_caption_observer_stub.cpp  accessible_ability_manager_config_observer_proxy.cpp  accessible_ability_manager_config_observer_stub.cpp  accessible_ability_manager_service_proxy.cpp  accessible_ability_manager_service_stub.cpp  accessible_ability_manager_state_observer_proxy.cpp  accessible_ability_manager_state_observer_stub.cpp  api_event_reporter.cpp
common/interface/test/: BUILD.gn
frameworks/aafwk/: BUILD.gn  aafwk.gni
frameworks/aafwk/include/: accessibility_display_resize_controller_impl.h  accessibility_element_operator_callback_impl.h  accessibility_extension.h  accessibility_extension_context.h  accessibility_extension_module_loader.h  accessibility_ui_test_ability_impl.h  accessible_ability.h  accessible_ability_channel_client.h  accessible_ability_client_impl.h  accessible_ability_client_interface.h  accessible_ability_client_proxy.h  accessible_ability_client_stub.h  accessible_ability_client_stub_impl.h  accessible_ability_event_handler.h  accessible_ability_listener.h  display_resize_controller.h  fingerprint_controller.h  js_accessibility_extension.h  js_accessibility_extension_context.h
frameworks/aafwk/src/: accessibility_display_resize_controller_impl.cpp  accessibility_element_operator_callback_impl.cpp  accessibility_extension.cpp  accessibility_extension_context.cpp  accessibility_extension_module_loader.cpp  accessibility_ui_test_ability.cpp  accessibility_ui_test_ability_impl.cpp  accessible_ability.cpp  accessible_ability_channel_client.cpp  accessible_ability_client_impl.cpp  accessible_ability_client_proxy.cpp  accessible_ability_client_stub.cpp  accessible_ability_client_stub_impl.cpp  accessible_ability_event_handler.cpp  display_resize_controller.cpp  fingerprint_controller.cpp  js_accessibility_extension.cpp  js_accessibility_extension_context.cpp
frameworks/aafwk/test/: BUILD.gn
frameworks/acfwk/test/: BUILD.gn
frameworks/asacfwk/: asacfwk.gni
frameworks/asacfwk/include/: accessibility_element_operator_async_mng.h  accessibility_element_operator_callback_interface.h  accessibility_element_operator_callback_proxy.h  accessibility_element_operator_callback_stub.h  accessibility_element_operator_impl.h  accessibility_element_operator_interface.h  accessibility_element_operator_proxy.h  accessibility_element_operator_stub.h  accessibility_interaction_operation_callback_interface.h  accessibility_interaction_operation_callback_proxy.h  accessibility_interaction_operation_callback_stub.h  accessibility_interaction_operation_interface.h  accessibility_interaction_operation_proxy.h  (+16 more)
frameworks/systemtest/: BUILD.gn  accessibility_system_ability_client_test.cpp  uiTestAbilityTest.cpp
sa_profile/: 4702.xml  801.json  801.xml  801_dynamic.json  BUILD.gn  accessibility.cfg  accessibility_dynamic.cfg
services/aams/: BUILD.gn  accessibleabilityms.gni  libaccessibilityms.map
services/aams_ext/: BUILD.gn
services/blinking_reminder/: BUILD.gn
services/interface/: BUILD.gn
services/test/: BUILD.gn  aamstestmock.gni
tools/ohos-accessibilityManager/: BUILD.gn  README.md  TEST_REPORT.md  ohos-a11yManager.json
(+1168 files in other folders)
