# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

declare_args() {
  accessibility_feature_power_manager = true
  accessibility_feature_display_manager = true
  accessibility_use_rosen_drawing = false
  if (defined(global_parts_info) &&
      !defined(global_parts_info.powermgr_display_manager)) {
    accessibility_feature_display_manager = false
  }

  if (defined(global_parts_info) &&
      !defined(global_parts_info.powermgr_power_manager)) {
    accessibility_feature_power_manager = false
  }

  if (defined(use_rosen_drawing) && use_rosen_drawing) {
    accessibility_use_rosen_drawing = true
  }
}

print(
    "accessibility_feature_display_manager = ${accessibility_feature_display_manager}")
print(
    "accessibility_feature_power_manager = ${accessibility_feature_power_manager}")
print("accessibility_use_rosen_drawing = ${accessibility_use_rosen_drawing}")

accessibility_default_defines = []

if (accessibility_feature_power_manager) {
  accessibility_default_defines += [ "OHOS_BUILD_ENABLE_POWER_MANAGER" ]
}

if (accessibility_feature_display_manager) {
  accessibility_default_defines += [ "OHOS_BUILD_ENABLE_DISPLAY_MANAGER" ]
}

if (accessibility_use_rosen_drawing) {
  accessibility_default_defines += [ "USE_ROSEN_DRAWING" ]
}
