# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/accessibility/accessibility.gni")

aafwk_files = [
  "${aafwk_path}/src/accessible_ability_client_stub.cpp",
  "${aafwk_path}/src/accessible_ability_client_proxy.cpp",
  "${aafwk_path}/src/accessible_ability_client_stub_impl.cpp",
  "${aafwk_path}/src/accessibility_extension_context.cpp",
  "${aafwk_path}/src/accessibility_extension.cpp",
  "${aafwk_path}/src/display_resize_controller.cpp",
  "${aafwk_path}/src/js_accessibility_extension.cpp",
  "${aafwk_path}/src/js_accessibility_extension_context.cpp",
]
