# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/accessibility/accessibility.gni")

asacfwk_files = [
  "${asacfwk_path}/src/accessibility_event_info.cpp",
  "${asacfwk_path}/src/accessibility_element_info.cpp",
  "${asacfwk_path}/src/accessibility_window_info.cpp",
  "${asacfwk_path}/src/accessibility_state_event.cpp",
  "${asacfwk_path}/src/accessibility_system_ability_client.cpp",
  "${asacfwk_path}/src/accessible_ability_manager_service_proxy.cpp",
  "${asacfwk_path}/src/accessible_ability_manager_service_state_proxy.cpp",
  "${asacfwk_path}/src/accessible_ability_manager_service_state_stub.cpp",
  "${asacfwk_path}/src/accessible_ability_manager_service_stub.cpp",
  "${asacfwk_path}/src/accessibility_element_operator_callback_proxy.cpp",
  "${asacfwk_path}/src/accessibility_element_operator_callback_stub.cpp",
  "${asacfwk_path}/src/accessibility_element_operator_proxy.cpp",
  "${asacfwk_path}/src/accessibility_element_operator_stub.cpp",
  "${asacfwk_path}/src/accessibility_ability_info.cpp",
  "${asacfwk_path}/src/accessible_ability_manager_service_caption_property_proxy.cpp",
  "${asacfwk_path}/src/accessible_ability_manager_service_caption_property_stub.cpp",
  "${asacfwk_path}/src/accessibility_caption.cpp",
  "${asacfwk_path}/src/accessible_ability_channel_proxy.cpp",
  "${asacfwk_path}/src/accessible_ability_channel_stub.cpp",
  "${asacfwk_path}/src/accessibility_operator.cpp",
  "${asacfwk_path}/src/accessibility_element_operator_async_mng.cpp",
  "${asacfwk_path}/src/gesture_simulation.cpp",
  "//base/accessibility/util/src/json_utils.cpp",
]
