# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

services_path = "//base/accessibility/services/aams"

ohos_prebuilt_etc("accessibility_service.rc") {
  source = "etc/accessibility_service.rc"
  relative_install_dir = "init"
  part_name = "accessibility"
  subsystem_name = "barrierfree"
}

config("aams_service_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
    "//base/accessibility/common/log/include",
  ]

  defines = [
    "AAMS_LOG_TAG = \"accessibility\"",
    "AAMS_LOG_DOMAIN = 0xD005200",
  ]
}

accessibleabilityms_files = [
  "${services_path}/src/accessible_ability_channel.cpp",
  "${services_path}/src/accessible_ability_connection.cpp",
  "${services_path}/src/accessible_ability_manager_service_event_handler.cpp",
  "${services_path}/src/accessible_ability_manager_service.cpp",
  "${services_path}/src/accessibility_account_data.cpp",
  "${services_path}/src/accessibility_window_connection.cpp",
  "${services_path}/src/accessibility_zoom_gesture.cpp",
  "${services_path}/src/accessibility_zoom_handler.cpp",
  "${services_path}/src/accessibility_common_event_registry.cpp",
  "${services_path}/src/accessibility_touch_guider.cpp",
  "${services_path}/src/accessibility_gesture_recognizer.cpp",
  "${services_path}/src/accessibility_event_transmission.cpp",
  "${services_path}/src/accessibility_input_interceptor.cpp",
  "${services_path}/src/accessibility_touchEvent_injector.cpp",
  "${services_path}/src/accessibility_keyevent_filter.cpp",
  "${services_path}/src/accessibility_window_manager.cpp",
  "${services_path}/src/accessibility_display_manager.cpp",
  "${services_path}/src/json_utils.cpp",
]

ohos_shared_library("accessibleabilityms") {
  sources = accessibleabilityms_files

  configs = [ ":aams_service_config" ]

  deps = [
    "//base/accessibility/interfaces/innerkits/common:accessibility_common",
    "//base/accessibility/services/interface:aams_interface",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "ces_standard:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "input:libmmi-client",
    "ipc:ipc_core",
    "native_appdatamgr:native_preferences",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
    "window_manager:libdm",
    "window_manager:libwm",
  ]

  install_enable = true

  subsystem_name = "barrierfree"
  part_name = "accessibility"
}
