# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/accessibility/accessibility.gni")

accessibleabilityms_files = [
  "${services_path}/aams/src/accessible_ability_connection.cpp",
  "${services_path}/aams/src/accessible_ability_manager_service_event_handler.cpp",
  "${services_path}/aams/src/accessible_ability_manager_service.cpp",
  "${services_path}/aams/src/accessibility_account_data.cpp",
  "${services_path}/aams/src/accessibility_interaction_connection.cpp",
  "${services_path}/aams/src/accessibility_zoom_gesture.cpp",
  "${services_path}/aams/src/accessibility_zoom_handler.cpp",
  "${services_path}/aams/src/accessibility_common_event_registry.cpp",
  "${services_path}/aams/src/accessibility_touch_guider.cpp",
  "${services_path}/aams/src/accessibility_gesture_recognizer.cpp",
  "${services_path}/aams/src/accessibility_event_transmission.cpp",
  "${services_path}/aams/src/accessibility_input_filter.cpp",
  "${services_path}/aams/src/accessibility_touchEvent_injector.cpp",
  "${services_path}/aams/src/accessibility_keyevent_filter.cpp",
  "${services_path}/aams/src/accessibility_window_manager.cpp",
  "${services_path}/aams/src/accessibility_display_manager.cpp",
  "${services_path}/aams/src/accessibility_interaction_bridge.cpp",
  "//base/accessibility/dummyData/multimoduleDummy.cpp",
]
